Minor css fix for the iframe example, componentareas now scroll overflowing iframe on smaller devices

--- a/public/css/_examples.scss
+++ b/public/css/_examples.scss
@@ -18,6 +18,8 @@
   position: relative;
   padding: 10px;
   border: 1px dashed $dashedBorderColor;
+  width: 100%;
+  overflow: auto;
   @extend %clearfix;
 }
 
