--- a/public/css/_framework.scss
+++ b/public/css/_framework.scss
@@ -82,15 +82,15 @@ body {
 }
 
 .sidebar {
-  left: -$sidebarWidth;
-  transition: left 0.2s ease-out;
+  transform: translateX(-$sidebarWidth);
+  transition: .2s;
   z-index: 2;
 }
 
 .sidebar--fixed {
   .sidebar {
     position: fixed;
-    left: -$sidebarWidth;
+    transform: translateX(-$sidebarWidth);
     top: 0;
     bottom: 0;
     overflow: auto;
@@ -100,7 +100,7 @@ body {
 
 .sidebar--visible {
   .sidebar {
-    left: 0;
+    transform: translateX(0);
   }
 
   .sidebar-wrapper {
@@ -123,6 +123,6 @@ body {
   }
 
   .sidebar--fixed .sidebar, .sidebar {
-    left: 0;
+    transform: translateX(0);
   }
 }
